--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,9 @@
     <properties>
         <java.version>17</java.version>
         <spring-cloud.version>2022.0.0</spring-cloud.version>
+        <fastjson.version>1.2.70</fastjson.version>
+        <hutool-all.version>5.6.3</hutool-all.version>
+        <spring-boot-starter-aop.version>2.7.7</spring-boot-starter-aop.version>
     </properties>
 
     <dependencyManagement>
@@ -30,6 +33,24 @@
                 <version>${spring-cloud.version}</version>
                 <type>pom</type>
                 <scope>import</scope>
+            </dependency>
+
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter-aop</artifactId>
+                <version>${spring-boot-starter-aop.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>com.alibaba</groupId>
+                <artifactId>fastjson</artifactId>
+                <version>${fastjson.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>cn.hutool</groupId>
+                <artifactId>hutool-all</artifactId>
+                <version>${hutool-all.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
