--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
     <description>train</description>
     <modules>
         <module>member</module>
+        <module>common</module>
     </modules>
     <properties>
         <java.version>17</java.version>
@@ -23,6 +24,7 @@
         <fastjson.version>1.2.70</fastjson.version>
         <hutool-all.version>5.6.3</hutool-all.version>
         <spring-boot-starter-aop.version>2.7.7</spring-boot-starter-aop.version>
+        <common.version>0.0.1-SNAPSHOT</common.version>
     </properties>
 
     <dependencyManagement>
@@ -51,6 +53,12 @@
                 <groupId>cn.hutool</groupId>
                 <artifactId>hutool-all</artifactId>
                 <version>${hutool-all.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>com.tc</groupId>
+                <artifactId>common</artifactId>
+                <version>${common.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
