--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,7 @@
         <hutool-all.version>5.6.3</hutool-all.version>
         <spring-boot-starter-aop.version>2.7.7</spring-boot-starter-aop.version>
         <common.version>0.0.1-SNAPSHOT</common.version>
+        <netty-resolver-dns-native-macos.version>4.1.75.Final</netty-resolver-dns-native-macos.version>
     </properties>
 
     <dependencyManagement>
@@ -60,6 +61,14 @@
                 <groupId>com.tc</groupId>
                 <artifactId>common</artifactId>
                 <version>${common.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>io.netty</groupId>
+                <artifactId>netty-resolver-dns-native-macos</artifactId>
+                <version>${netty-resolver-dns-native-macos.version}</version>
+                <classifier>osx-aarch_64</classifier>
+                <scope>runtime</scope>
             </dependency>
         </dependencies>
     </dependencyManagement>
