--- a/member/src/main/resources/application.properties
+++ b/member/src/main/resources/application.properties
@@ -1,2 +1,11 @@
 server.port=8001
 server.servlet.context-path=/member
+
+
+spring.datasource.url=jdbc:mysql://localhost/train_member?characterEncoding=UTF8&autoReconnect=true&serverTimezone=Asia/Shanghai
+spring.datasource.username=train_member
+spring.datasource.password=tc20032003
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+mybatis.mapper-locations=classpath:/mapper/**/*.xml
+logging.level.com.tc.train.member.mapper=trace
