完成login接口编写,集成了redis

--- a/member/src/main/resources/application.properties
+++ b/member/src/main/resources/application.properties
@@ -9,3 +9,24 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 mybatis.mapper-locations=classpath:/mapper/**/*.xml
 logging.level.com.tc.train.member.mapper=trace
+
+# Redis 数据库索引（默认为0）
+spring.data.redis.database=0
+# Redis 服务的ip,我的是在虚拟机的服务器上。
+spring.data.redis.host=localhost
+# Redis 端口
+spring.data.redis.port=6379
+# Redis 密码，默认为空，可以修改 redis.conf配置文件
+spring.data.redis.password=
+spring.data.redis.jedis.pool.max-idle=6
+spring.data.redis.jedis.pool.max-active=32
+spring.data.redis.jedis.pool.max-wait=100
+spring.data.redis.jedis.pool.min-idle=4
+
+verify.code.prefix=verify_code # 缓存中key前缀
+verify.code.type=jpg
+verify.code.timeout=60
+
+
+
+
