--- a/pom.xml
+++ b/pom.xml
@@ -15,8 +15,8 @@
     <name>train</name>
     <description>train</description>
     <modules>
-        <module>member</module>
         <module>common</module>
+        <module>member</module>
         <module>gateway</module>
         <module>generator</module>
     </modules>
@@ -24,14 +24,16 @@
         <java.version>17</java.version>
         <spring-cloud.version>2022.0.0</spring-cloud.version>
         <fastjson.version>1.2.70</fastjson.version>
-        <hutool-all.version>5.6.3</hutool-all.version>
+        <hutool-all.version>5.8.10</hutool-all.version>
         <spring-boot-starter-aop.version>2.7.7</spring-boot-starter-aop.version>
         <common.version>0.0.1-SNAPSHOT</common.version>
         <netty-resolver-dns-native-macos.version>4.1.75.Final</netty-resolver-dns-native-macos.version>
-        <lombok.version>1.18.12</lombok.version>
+        <lombok.version>1.18.26</lombok.version>
         <commons-lang3.version>3.9</commons-lang3.version>
         <mybatis-spring-boot-stater.version>3.0.0</mybatis-spring-boot-stater.version>
         <mysql-connetor-java.version>8.0.22</mysql-connetor-java.version>
+        <redisson-spring-boot-starter.version>3.15.6</redisson-spring-boot-starter.version>
+
     </properties>
 
     <dependencyManagement>
@@ -99,11 +101,19 @@
                 <artifactId>mysql-connector-java</artifactId>
                 <version>${mysql-connetor-java.version}</version>
             </dependency>
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter-data-redis</artifactId>
+            </dependency>
 
+            <dependency>
+                <groupId>org.redisson</groupId>
+                <artifactId>redisson-spring-boot-starter</artifactId>
+                <version>${redisson-spring-boot-starter.version}</version>
+            </dependency>
 
         </dependencies>
     </dependencyManagement>
-
 
 
 </project>
