--- a/gateway/pom.xml
+++ b/gateway/pom.xml
@@ -48,10 +48,9 @@
             <artifactId>commons-lang3</artifactId>
             <version>3.12.0</version>
         </dependency>
-
         <dependency>
-            <groupId>com.tc</groupId>
-            <artifactId>common</artifactId>
+            <groupId>cn.hutool</groupId>
+            <artifactId>hutool-all</artifactId>
         </dependency>
 
         <dependency>
