--- a/member/src/main/resources/application.properties
+++ b/member/src/main/resources/application.properties
@@ -10,22 +10,29 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 mybatis.mapper-locations=classpath:/mapper/**/*.xml
 logging.level.com.tc.train.member.mapper=trace
 
-# Redis 数据库索引（默认为0）
-spring.data.redis.database=0
-# Redis 服务的ip,我的是在虚拟机的服务器上。
+# Redis \u6570\u636E\u5E93\u7D22\u5F15\uFF08\u9ED8\u8BA4\u4E3A0\uFF09
+# Redis\u6570\u636E\u5E93\u7D22\u5F15\uFF08\u9ED8\u8BA4\u4E3A0\uFF09
+spring.data.redis.database=0  
+# Redis\u670D\u52A1\u5668\u5730\u5740
 spring.data.redis.host=localhost
-# Redis 端口
-spring.data.redis.port=6379
-# Redis 密码，默认为空，可以修改 redis.conf配置文件
+# Redis\u670D\u52A1\u5668\u8FDE\u63A5\u7AEF\u53E3
+spring.data.redis.port=6379  
+# Redis\u670D\u52A1\u5668\u8FDE\u63A5\u5BC6\u7801\uFF08\u9ED8\u8BA4\u4E3A\u7A7A\uFF09
 spring.data.redis.password=
-spring.data.redis.jedis.pool.max-idle=6
-spring.data.redis.jedis.pool.max-active=32
-spring.data.redis.jedis.pool.max-wait=100
-spring.data.redis.jedis.pool.min-idle=4
+# \u8FDE\u63A5\u6C60\u6700\u5927\u8FDE\u63A5\u6570\uFF08\u4F7F\u7528\u8D1F\u503C\u8868\u793A\u6CA1\u6709\u9650\u5236\uFF09 \u9ED8\u8BA4 8
+spring.data.redis.lettuce.pool.max-active=8
+# \u8FDE\u63A5\u6C60\u6700\u5927\u963B\u585E\u7B49\u5F85\u65F6\u95F4\uFF08\u4F7F\u7528\u8D1F\u503C\u8868\u793A\u6CA1\u6709\u9650\u5236\uFF09 \u9ED8\u8BA4 -1
+spring.data.redis.lettuce.pool.max-wait=-1
+# \u8FDE\u63A5\u6C60\u4E2D\u7684\u6700\u5927\u7A7A\u95F2\u8FDE\u63A5 \u9ED8\u8BA4 8
+spring.data.redis.lettuce.pool.max-idle=8
+# \u8FDE\u63A5\u6C60\u4E2D\u7684\u6700\u5C0F\u7A7A\u95F2\u8FDE\u63A5 \u9ED8\u8BA4 0
+spring.data.redis.lettuce.pool.min-idle=0
+# \u8FDE\u63A5\u8D85\u65F6\u65F6\u95F4\uFF08\u6BEB\u79D2\uFF09
+spring.data.redis.timeout=1000
 
-verify.code.prefix=verify_code # 缓存中key前缀
-verify.code.type=jpg
-verify.code.timeout=60
+
+
+
 
 
 
