--- a/pom.xml
+++ b/pom.xml
@@ -32,7 +32,7 @@
         <commons-lang3.version>3.9</commons-lang3.version>
         <mybatis-spring-boot-stater.version>3.0.0</mybatis-spring-boot-stater.version>
         <mysql-connetor-java.version>8.0.22</mysql-connetor-java.version>
-        <redisson-spring-boot-starter.version>3.15.6</redisson-spring-boot-starter.version>
+        <jedis.version>3.1.0</jedis.version>
 
     </properties>
 
@@ -73,7 +73,7 @@
             <dependency>
                 <groupId>io.netty</groupId>
                 <artifactId>netty-resolver-dns-native-macos</artifactId>
-                <version>${netty-resolver-dns-native-macos.version}</version>
+                <version>4.1.85.Final</version>
                 <classifier>osx-aarch_64</classifier>
                 <scope>runtime</scope>
             </dependency>
@@ -87,13 +87,13 @@
             <dependency>
                 <groupId>org.apache.commons</groupId>
                 <artifactId>commons-lang3</artifactId>
-                <version>${commons-lang3.version}</version>
+                <version>3.12.0</version>
             </dependency>
 
             <dependency>
                 <groupId>org.mybatis.spring.boot</groupId>
                 <artifactId>mybatis-spring-boot-starter</artifactId>
-                <version>${mybatis-spring-boot-stater.version}</version>
+                <version>3.0.1</version>
             </dependency>
             <!-- 集成mysql连接 -->
             <dependency>
@@ -101,16 +101,15 @@
                 <artifactId>mysql-connector-java</artifactId>
                 <version>${mysql-connetor-java.version}</version>
             </dependency>
+
             <dependency>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-starter-data-redis</artifactId>
+                <version>3.0.0</version>
             </dependency>
 
-            <dependency>
-                <groupId>org.redisson</groupId>
-                <artifactId>redisson-spring-boot-starter</artifactId>
-                <version>${redisson-spring-boot-starter.version}</version>
-            </dependency>
+
+
 
         </dependencies>
     </dependencyManagement>
