--- a/common/pom.xml
+++ b/common/pom.xml
@@ -77,6 +77,11 @@
             <artifactId>commons-pool2</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>com.github.pagehelper</groupId>
+            <artifactId>pagehelper-spring-boot-starter</artifactId>
+        </dependency>
+
 
 
     </dependencies>
