--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,8 @@
         <mybatis-spring-boot-stater.version>3.0.0</mybatis-spring-boot-stater.version>
         <mysql-connetor-java.version>8.0.22</mysql-connetor-java.version>
         <jedis.version>3.1.0</jedis.version>
+        <spring-boot-data-starter-redis.version>3.0.0</spring-boot-data-starter-redis.version>
+        <pagehelper-spring-boot-starter.version>1.4.6</pagehelper-spring-boot-starter.version>
 
     </properties>
 
@@ -105,11 +107,14 @@
             <dependency>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-starter-data-redis</artifactId>
-                <version>3.0.0</version>
+                <version>${spring-boot-data-starter-redis.version}</version>
             </dependency>
 
-
-
+            <dependency>
+                <groupId>com.github.pagehelper</groupId>
+                <artifactId>pagehelper-spring-boot-starter</artifactId>
+                <version>${pagehelper-spring-boot-starter.version}</version>
+            </dependency>
 
         </dependencies>
     </dependencyManagement>
